Fix bugs, adding projects links to github

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <img src="assets/img/profile-img.jpeg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-              <h3>System Engineer &amp; Full-Stack Developer.</h3>
+              <h3>Computer Systems Engineer &amp; Software Developer.</h3>
               <p class="font-italic">
                 Student at the National University of Costa Rica
               </p>
@@ -243,7 +243,20 @@
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <div class="progress">
-                <span class="skill">PHP <i class="val">80%</i></span>
+                <span class="skill">JAVA <i class="val">90%</i></span>
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="90"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">MySQL <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -255,18 +268,7 @@
                 </div>
               </div>
 
-              <div class="progress">
-                <span class="skill">WordPress/CMS <i class="val">90%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="90"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
+              
 
               <div class="progress">
                 <span class="skill">Photoshop <i class="val">55%</i></span>
@@ -386,7 +388,6 @@
               <ul id="portfolio-flters">
                 <li data-filter="*" class="filter-active">All</li>
                 <li data-filter=".filter-app">App</li>
-                <li data-filter=".filter-card">Card</li>
                 <li data-filter=".filter-web">Web</li>
               </ul>
             </div>
@@ -412,7 +413,7 @@
                     title="App 1"
                     ><i class="bx bx-show"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://github.com/yeikol2703/controlClientes" title="More Details"
                     ><i class="bx bxl-github"></i
                   ></a>
                 </div>
@@ -434,14 +435,14 @@
                     title="Web 3"
                     ><i class="bx bx-show"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://github.com/yeikol2703/Frontend-practica01l" title="More Details"
                     ><i class="bx bxl-github"></i
                   ></a>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio2/portfolio.jpg"
@@ -453,17 +454,17 @@
                     href="assets/img/portfolio2/portfolio.jpg"
                     data-gall="portfolioGallery"
                     class="venobox"
-                    title="App 2"
+                    title="web 2"
                     ><i class="bx bx-show"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://github.com/yeikol2703/Portafolio2021" title="More Details"
                     ><i class="bx bxl-github"></i
                   ></a>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio2/cursos2.jpg"
@@ -475,17 +476,17 @@
                     href="assets/img/portfolio2/cursos2.jpg"
                     data-gall="portfolioGallery"
                     class="venobox"
-                    title="Card 2"
+                    title="App 2"
                     ><i class="bx bx-show"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://github.com/dicarlomtz/CursosLibres" title="More Details"
                     ><i class="bx bxl-github"></i
                   ></a>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio2/cinema.jpg"
@@ -497,10 +498,10 @@
                     href="assets/img/portfolio2/cinema.jpg"
                     data-gall="portfolioGallery"
                     class="venobox"
-                    title="Web 2"
+                    title="App 3"
                     ><i class="bx bx-show"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://github.com/dicarlomtz/CINE-YEMADI" title="More Details"
                     ><i class="bx bxl-github"></i
                   ></a>
                 </div>
@@ -523,7 +524,7 @@
                     title="Web 3"
                     ><i class="bx bx-show"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="#" title="More Details"
                     ><i class="bx bxl-github"></i
                   ></a>
                 </div>
@@ -549,10 +550,9 @@
           <div class="row">
             <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
               <div class="icon"><i class="icofont-computer"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+              <h4 class="title"><a href="">Web Application</a></h4>
               <p class="description">
-                Voluptatum deleniti atque corrupti quos dolores et quas
-                molestias excepturi sint occaecati cupiditate non provident
+                I have built web applications, using rest services on a backend and consuming them from a font end
               </p>
             </div>
             <div
@@ -561,10 +561,9 @@
               data-aos-delay="100"
             >
               <div class="icon"><i class="icofont-chart-bar-graph"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
+              <h4 class="title"><a href="">Database Manager</a></h4>
               <p class="description">
-                Minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat tarad limino ata
+                I handle database languages like oracle, mysql. I have experience with design, user permissions, triggers.
               </p>
             </div>
             <div
@@ -573,10 +572,9 @@
               data-aos-delay="200"
             >
               <div class="icon"><i class="icofont-earth"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+              <h4 class="title"><a href="">Web Design</a></h4>
               <p class="description">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur
+                I have knowledge and experience developing static websites according to client needs
               </p>
             </div>
             <div
@@ -585,10 +583,9 @@
               data-aos-delay="300"
             >
               <div class="icon"><i class="icofont-image"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <h4 class="title"><a href="">UI/UX Design</a></h4>
               <p class="description">
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                qui officia deserunt mollit anim id est laborum
+                I can create wireframes and muckups, according to the specifications of a client
               </p>
             </div>
             <div
@@ -596,24 +593,6 @@
               data-aos="fade-up"
               data-aos-delay="400"
             >
-              <div class="icon"><i class="icofont-settings"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                blanditiis praesentium voluptatum deleniti atque
-              </p>
-            </div>
-            <div
-              class="col-lg-4 col-md-6 icon-box"
-              data-aos="fade-up"
-              data-aos-delay="500"
-            >
-              <div class="icon"><i class="icofont-tasks-alt"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">
-                Et harum quidem rerum facilis est et expedita distinctio. Nam
-                libero tempore, cum soluta nobis est eligendi
-              </p>
             </div>
           </div>
         </div>
