fix grammatical errors

--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
               <h3>Computer Systems Engineer &amp; Software Developer.</h3>
               <p class="font-italic">
-                Student at the National University of Costa Rica
+                Student at the Universidad Nacional de Costa Rica
               </p>
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
                     <li>
                       <i class="icofont-rounded-right"></i>
-                      <strong>Birthday:</strong> 27 March 1999
+                      <strong>Birthday:</strong> March 27th, 1999
                     </li>
                     <li>
                       <i class="icofont-rounded-right"></i>
